# ROKEY-COBOT1

./: README.md  requirements.txt
01_cobot1_action_v5/: CMakeLists.txt
01_cobot1_action_v5/action/: Assembly.action
02_cobot1_nodes_v5/: setup.cfg  setup.py
02_cobot1_nodes_v5/cobot1_nodes_v5/: __init__.py  control_node_v5.py  integration_node_v5.py
04_web_ui/static/: script.js  style.css
04_web_ui/templates/: index.html
cobot1_action_v5/: package.xml
cobot1_nodes_v5/: package.xml
cobot1_nodes_v5/cobot1_nodes_v5/: db_bridge_node_v5.py
web_ui/: app.py
web_ui/templates/: process.html  summary.html
